removed interaction and fixed layout to eliminate whitespace

--- a/arc_evals/app/assets/style.css
+++ b/arc_evals/app/assets/style.css
@@ -6,6 +6,10 @@
     cursor: pointer;
 }
 
+.task-graph {
+    height: 200px;
+}
+
 .eval {
     border-style: solid;
     border: solid 1px black;
